<resources>
    <string name="app_name">PC Builder</string>
    <string name="evening">Good Evening!</string>
    <string name="night">Good Night!</string>
    <string name="morning">Good Morning!</string>
    <string name="afternoon">Good Afternoon!</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin">Sign In</string>
    <string name="registration">Registration</string>
    <string name="google_signin_fail">Google sign in failed</string>
    <string name="auth_succes">Authentification succesful</string>
    <string name="auth_fail">Authentification failed</string>
    <string name="default_web_client_id" translatable="false">996470208642-nbdr5ve0u4sec6m2e22fedc0727v3ptf.apps.googleusercontent.com</string>
    <string name="logout">Log Out</string>
    <string name="reg_succes">Registration succes</string>
    <string name="reg_fail">Registration failed</string>
    <string name="label_password2">Repeat password</string>
    <string name="min_sybols">At least 6 characters</string>
    <string name="label_empty">Fill in the field!</string>
    <string name="label_invalid">Invalid email or password!</string>
    <string name="label_notmatch">Passwords don\'t match!</string>
    <string name="label_invalid_email">Invalid Email!</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>
    <string name="study_title">Study</string>
    <string name="build_title">Build</string>
    <string name="favorite_bar">Favorite</string>
    <string name="search_bar">Search</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_empty_all">Fill in all fields!</string>
    <string name="greeting_home">Welcome!</string>
    <string name="part1_title">Part 1: Basic Computer Components</string>
    <string name="part2_title">Part 2: Computer Assembly</string>
    <string name="part3_title">Final testing</string>
    <string name="titlehome_2">What are we going to do?</string>
    <string name="continue_studies">Shall we continue our studies?</string>
    <string name="testbody_card" translatable="false">Текущая тема: Микропроцессоры</string>
    <string name="homebuildcard">Let\'s build a computer</string>
    <string name="continue_button">Continue</string>
    <string name="build_button_home">Build</string>
    <string name="viewed_lesson">Viewed</string>
    <string name="about_settings">About App</string>
    <string name="github_settings">PCBuilder GitHub</string>
    <string name="settings_github_body">Submit bugs and feature requests.</string>
    <string name="settings_about_body">With love from BybLik🖤</string>
    <string name="me">Designer and Developer:\n Kirill Rykhlov\n Contact with me: rihlov.kirill@gmail.com</string>
    <string name="fab_add">Add Build</string>
    <string name="ruble" translatable="false">" ₽"</string>
    <string name="empty_cpu">Empty CPU</string>
    <string name="empty_gpu">Empty GPU</string>
    <string name="dialog_add">Create</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title">Create new Build</string>
    <string name="dialog_edittext">Enter a name.</string>
    <string name="empty_ram">Empty RAM</string>
    <string name="empty_psu">Empty Power Supply</string>
    <string name="empty_case">Empty Case</string>
    <string name="empty_storage">Empty Storage</string>
    <string name="empty_motherboard">Empty Mother Board</string>
    <string name="empty_cooling">Empty CPU Cooler</string>
    <string name="add_gpu">Add GPU</string>
    <string name="add_ram">Add RAM</string>
    <string name="add_case">Add Case</string>
    <string name="add_storage">Add Storage</string>
    <string name="add_motherboard">Add Motherboard</string>
    <string name="add_cooling">Add Cooling</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="fab_upd">Add to Build</string>
    <string name="cores_threads">"Cores / Threads: "</string>
    <string name="clock">"Clock Speed: "</string>
    <string name="vram_size">"VRAM Size: "</string>
    <string name="chipset">"Chipset: "</string>
    <string name="form_factor">"Form Factor: "</string>
    <string name="total_size">Total Size:</string>
    <string name="ram">RAM</string>
    <string name="storage">Storage</string>
    <string name="motherboard">Motherboard</string>
    <string name="psu">Power Supply</string>
    <string name="socket">"Socket: "</string>
    <string name="add_psu">Add PSU</string>
    <string name="add_cpu">Add CPU</string>
    <string name="build_name">Build Name</string>
    <string name="total_price">Total Price</string>
</resources>