<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/home_ico"
            android:title="@string/home_title"
            android:enabled="true"/>
        <item
            android:id="@+id/study_item"
            android:icon="@drawable/menu_book_ico"
            android:title="@string/study_title"
            android:enabled="true"/>
        <item
            android:id="@+id/build_item"
            android:icon="@drawable/storage_ico"
            android:title="@string/build_title"
            android:enabled="true"/>
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/settings_ico"
            android:title="@string/settings_title"
            android:enabled="true"/>
    </menu>
