<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="59dp"
        android:layout_height="35dp"
        android:onClick="back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/registration"
        android:textSize="@dimen/titleText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="352dp"
        android:layout_height="75dp"
        android:fontFamily="serif"
        android:hint="@string/label_email"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passInputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="352dp"
        android:layout_height="75dp"
        android:layout_marginTop="7dp"
        android:fontFamily="serif"
        android:hint="@string/label_password"
        app:helperTextEnabled="true"
        app:helperText="@string/min_sybols"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass2InputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="352dp"
        android:layout_height="75dp"
        android:layout_marginTop="7dp"
        android:fontFamily="serif"
        android:hint="@string/label_password2"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/gray"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass2TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:fontFamily="serif"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="7pt"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass2InputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>