<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudyFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/part1Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="5pt"
        app:cardElevation="4dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/part1Image"
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:scaleType="fitXY"
                android:src="@drawable/studylessons" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/part1_title"
                android:textAppearance="?attr/textAppearanceTitleLarge" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/part2Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="5pt"
        app:cardElevation="4dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/part2Image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/studybuildimage" />

            <TextView
                android:id="@+id/part2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/part2_title"
                android:textAppearance="?attr/textAppearanceTitleLarge" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/part3Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="5pt"
        app:cardElevation="4dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/part3Image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/studytest" />

            <TextView
                android:id="@+id/part3Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/part3_title"
                android:layout_margin="5dp"
                android:textAppearance="?attr/textAppearanceTitleLarge" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>